--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,6 @@ subjects:
 - !lcsh 'Portugal -- Politics and government -- Periodicals'
 - !lcc 'AP'
 - !lcc 'DP'
+- GITenberg
 title: 'As Farpas: Chronica Mensal da Politica, das Letras e dos Costumes (1878-02/05)'
 url: http://www.gutenberg.org/ebooks/13093
